--- a/LeaningWay/Base.lproj/Main.storyboard
+++ b/LeaningWay/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +16,63 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="From what is cognac made?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iUG-fk-HY9">
+                                <rect key="frame" x="193" y="28" width="214" height="21"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ph6-6W-Juy">
+                                <rect key="frame" x="248" y="102" width="104" height="30"/>
+                                <animations/>
+                                <state key="normal" title="Show Question"/>
+                                <connections>
+                                    <action selector="onQuestionClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="iWd-XZ-1mW"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="???" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ThU-pR-8z4">
+                                <rect key="frame" x="288" y="290" width="25" height="21"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hbu-x5-Znk">
+                                <rect key="frame" x="253" y="330" width="93" height="30"/>
+                                <animations/>
+                                <state key="normal" title="Show Answer"/>
+                                <connections>
+                                    <action selector="onAnswerShowClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="q4B-qI-79g"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="iUG-fk-HY9" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="0oT-Yb-a1J"/>
+                            <constraint firstItem="ThU-pR-8z4" firstAttribute="top" secondItem="ph6-6W-Juy" secondAttribute="bottom" constant="158" id="AbG-gN-p1v"/>
+                            <constraint firstItem="hbu-x5-Znk" firstAttribute="top" secondItem="ThU-pR-8z4" secondAttribute="bottom" constant="19" id="Ia5-ot-SCx"/>
+                            <constraint firstItem="hbu-x5-Znk" firstAttribute="centerX" secondItem="iUG-fk-HY9" secondAttribute="centerX" id="Me5-4B-ie5"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="iUG-fk-HY9" secondAttribute="bottom" constant="551" id="N7J-rj-ain"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="iUG-fk-HY9" secondAttribute="bottom" constant="551" id="Qfd-0q-6cV"/>
+                            <constraint firstItem="ph6-6W-Juy" firstAttribute="centerX" secondItem="iUG-fk-HY9" secondAttribute="centerX" id="YNm-Pf-scI"/>
+                            <constraint firstItem="hbu-x5-Znk" firstAttribute="top" secondItem="ThU-pR-8z4" secondAttribute="bottom" constant="19" id="iy6-Fy-Qxk"/>
+                            <constraint firstItem="ph6-6W-Juy" firstAttribute="top" secondItem="iUG-fk-HY9" secondAttribute="bottom" constant="53" id="n6k-m9-Dob"/>
+                            <constraint firstItem="ThU-pR-8z4" firstAttribute="centerX" secondItem="iUG-fk-HY9" secondAttribute="centerX" id="uTf-qx-stq"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="btn_question" destination="ph6-6W-Juy" id="aS5-UB-w9o"/>
+                        <outlet property="btn_show" destination="hbu-x5-Znk" id="PnC-Mt-YDP"/>
+                        <outlet property="lbl_answer" destination="ThU-pR-8z4" id="01f-ez-o88"/>
+                        <outlet property="lbl_question" destination="iUG-fk-HY9" id="QAo-8g-wAX"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="260" y="91"/>
         </scene>
     </scenes>
 </document>
